fix file previer link color on safari

--- a/app/assets/stylesheets/components/_multi-file-upload.scss
+++ b/app/assets/stylesheets/components/_multi-file-upload.scss
@@ -196,3 +196,6 @@
   margin-top: -5px;
   vertical-align: middle;
 }
+a:link {
+  color: #1d70b8;
+}
